--- a/navbar/styles.css
+++ b/navbar/styles.css
@@ -3,38 +3,56 @@
     padding: 0;
     list-style:none;
     text-decoration: none;
-    font-family:cursive;
     box-sizing: border-box;
     color: #fefefe;
 
 }
 
-.body{
-background:#fefefe;
+body{
+    font-family: sans-serif;
+    /* font-family: cursive; */
+    /* background-color: yellow; */
+
 height: 100vh;
+letter-spacing: 1px;
 
 }
 
 .head{
-
-  
-    width: 100%;
+    width: 100vw;
     height: 60px;
     padding: 0 100px;
     background: #11101b;
+  
 }
 .nav_bar{
     display: flex;
     height: inherit;
     align-items:  center;
     justify-content: space-between;
+   
 }
 .nav_bar .logo
 {
-    color: #fefefe;
+    letter-spacing: 18px;
+    font-weight: 500;
+    font-size: large;
+    /* font-style: italic; */
+    font-family: 'Montserrat Subrayada', sans-serif;
+    color: orangered
 }
+
+.nav_bar .hamburger
+{
+    
+    display: none;
+}
+
 .nav_bar .menu{
     display: flex;
+    width: auto;
+    justify-content: center;
+    align-items: center;
 
 }
 .menu ul{
@@ -42,18 +60,117 @@ height: 100vh;
 }
 
 .menu ul a{
+    font-size: small;
     display: block;
-    padding: 0 10px; 
-    margin: 10px;
-    transition: 0.2s;
+    padding: 10px 25px; 
+    margin: 5px;
+    transition: 0.2s linear;
     border-radius: 50px;
+    text-align: center;
 }
 
-.home{
-    background: #fefefe;
-    color:#11101b ;
-}
 .menu ul a:hover{
+    opacity: .8;
     background:#fefefe;
     color: #11101b;
 }
+
+.menu ul .home
+{
+    color: #11101b;
+    background-color: white;
+}
+
+@media only screen and (max-width:1320px)
+{
+    .head{
+        padding: 0 50px;
+       
+    }
+}
+@media only screen and (max-width:1100px)
+{
+    .head{
+        padding: 0 30px;
+       
+    }
+}
+@media only screen and (max-width:950px)
+{
+    .head{
+        padding: 0 20px;    
+    }
+}
+@media only screen and (max-width:850px)
+{
+
+
+    .nav_bar .hamburger{
+        display:block;
+        padding-bottom: 10px;
+    }
+    .nav_bar .hamburger:hover
+    {
+        cursor: pointer;
+    }
+    
+    .nav_bar .hamburger ul{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+           
+        
+    } 
+    .nav_bar span{
+        display: block;
+        line-height: 10px;
+
+    }
+
+    .nav_bar .menu{
+        height: 0px;
+        background-color: #11101b;
+        left: 0;
+        right:0 ;
+        width: 100vw;
+       
+        position: absolute;
+        top: 60px;
+     
+        overflow: hidden;
+        transition: all .5s;
+    }
+
+    .nav_bar .collapse{
+        height: 400px;
+ 
+    }
+
+    
+    .nav_bar .menu ul{
+        display: block;
+        width: fit-content;
+        margin:80px auto 0 auto;
+    }
+
+    .nav_bar .menu ul a{
+        margin-bottom: 20px;
+    }
+
+
+}
+
+.logo1{
+  
+    margin: 5% auto 0 43%;
+    transition: all 0.5s;
+}
+
+
+ .content{
+    /* background-color: red; */
+    height:200px;
+
+} 
+
+
