--- a/navbar/styles.css
+++ b/navbar/styles.css
@@ -168,8 +168,10 @@ letter-spacing: 1px;
 
 
  .content{
-    /* background-color: red; */
-    height:200px;
+    display: flex;
+    justify-content: center;
+    background-color: red;
+    height: 100%;
 
 } 
 
