--- a/protfolio 1/styles.css
+++ b/protfolio 1/styles.css
@@ -1,88 +1,177 @@
 /* <-=====================Root css ====================-> */
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-
-    
- 
-
 }
 
 /* <================  BODY CSS  ======================> */
 body {
     /* background: #080808; */
     height: 100vh;
-    color:#fff;
+    color: #fff;
     background-image: url("images/background.png");
-    background-size:cover;
-    background-repeat:no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
-   
+    position: relative;
+
 }
 
 
 /* <================  header container  ======================> */
-.container{
+.container {
     margin-top: 5px;
 }
 
 
 
 /* <================  nav-bar  ======================> */
-.nav-bar{
+.nav-bar {
     /* background-color: white; */
     display: flex;
     width: 80%;
     margin: 0 auto 0 auto;
     justify-content: space-between;
-    height: 60px;
+    height: 70px;
     align-items: center;
 }
 
 
 /* <================  navbar logo img ======================> */
-.nav-bar .logo img{
+.nav-bar .logo img {
     width: 100px;
 }
 
 
 
 /* <================ navbar ul ======================> */
-.nav-bar .menu ul{
+.nav-bar .menu ul {
     display: flex;
-    
+    flex-wrap: wrap;
+
 }
 
-.nav-bar .menu ul li{
+.nav-bar .menu ul li {
     margin: 0 25px;
 }
 
-/* <================ nab bar  ul a  ======================> */
-.nav-bar .menu ul a{
+/* <================ navbar  ul a  ======================> */
+.nav-bar .menu ul a {
     color: #fff;
-
+    letter-spacing: 1px;
+    font-size: medium;
     padding: 10px 0px;
-     transition: all .2s linear;
+    transition: all .2s linear;
 }
 
-.nav-bar .menu ul a::after{
-    transition: all .5s linear ;
+.nav-bar .menu ul a::after {
+    transition: all .5s linear;
     content: "";
     display: block;
     align-items: center;
     height: 2px;
     background-color: #dd092c;
-    width:0;
+    width: 0;
 
 }
 
-.nav-bar .menu ul a:hover:after
-{
-   
+.nav-bar .menu ul a:hover:after {
+    
     width: 100%;
 }
 
+
+
+
+
+/* <================ navbar  menu ul close  ======================> */
+.nav-bar .menu ul .close {
+    font-size: large;
+    font-weight: bold;
+    cursor: pointer;
+    display: none;
+
+}
+
+
+
+
+
+/* <================ navbar hamburger ======================> */
+.nav-bar .hamburger {
+    line-height: 6px;
+    margin-bottom: 18px;
+    display: none;
+    cursor: pointer;
+}
+
+
+
+
+/* <================ screen size 1000px  ======================> */
+@media only screen and (max-width:1000px) {
+/* <-------------   nav bar ---------------------------------------> */
+    .nav-bar {
+        width: 90%;
+    }
+}
+
+
+
+
+
+/* <================ screen size 900px  ======================> */
+@media only screen and (max-width:900px) {
+    .nav-bar .hamburger {
+        display: block;
+
+    }
+
+    /* <------------  nav menu --------------------------------> */
+    .nav-bar .menu {
+        width: 0;
+        display: flex;
+        flex-direction: row-reverse;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: #f3093c;
+        transition: all .5s;
+        overflow: hidden;
+
+    }
+
+    /* <----------------  nav-bar active  -------------------------> */
+    .nav-bar .active {
+        width: 50%;
+    }
+
+
+    /* <--------------  nav-bar menu ul ------------------------>  */
+    .nav-bar .menu ul {
+        transition: all .5s;
+        margin: 0 auto auto 0;
+        padding: 0;
+        height: 60%;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+    }
+/* <---------------- nav-bar menu  ul close -----------------------> */
+    .nav-bar .menu ul .close{
+        display: block;
+    }
+
+
+    /* <------------------    nav-bar menu  ul a -------------------------> */
+    .nav-bar .menu ul a {
+        letter-spacing: 1px;
+    }
+
+
+}
