--- a/protfolio 1/styles.css
+++ b/protfolio 1/styles.css
@@ -9,20 +9,28 @@
 }
 
 /* <================  BODY CSS  ======================> */
-body {
-    /* background: #080808; */
+body,html{
+    background: #080808;
     height: 100vh;
+    width: 100%;
     color: #fff;
+
+    /* position: relative; */
+
+}
+
+header{
     background-image: url("images/background.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    position: relative;
+    height: 100vh;
+    width: 100%;
 
 }
 
 
-/* <================  header container  ======================> */
+/* <========================================================= header container===================================  ======================> */
 .container {
     margin-top: 5px;
 }
@@ -112,6 +120,13 @@ body {
 
 
 
+
+
+
+
+
+
+
 /* <================ screen size 1000px  ======================> */
 @media only screen and (max-width:1000px) {
 /* <-------------   nav bar ---------------------------------------> */
@@ -174,4 +189,61 @@ body {
     }
 
 
+}
+
+.intro{
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin-top: 20%;
+    margin-left: 25%;
+    line-height: 40px;
+    width: fit-content;
+}
+
+.intro span{
+   
+    font-size: 30px;
+    font-weight: bolder;
+ 
+}
+
+/* <================ introduction span name ======================> */
+.intro #name{
+    color: #dd092c;
+}
+
+
+/* -=-=-=-=-=--=-=-=-=-=-=-=-=--= about -=-=-=-=-=--=-=-=-=-=-=-=-=--= */
+
+#about{
+    padding: 80px 50px;
+}
+
+.about .container{
+
+    color:#ababab
+
+}
+#about .container .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+
+}
+
+.about .container .row .about-col-1{
+    flex-basis: 35%;
+    background-color: red;
+}
+
+.about .container .row .about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about .container .row .about-col-2{
+    background-color: gray;
+    flex-basis: 60%;
+   
 }
