--- a/rough-work/styles.css
+++ b/rough-work/styles.css
@@ -138,15 +138,82 @@ body,html{
 }
 
 
-/*/* <================    about   ======================> */
+/* <================ screen size 1000px  ======================> */
+@media only screen and (max-width:1000px) {
+    /* <-------------   nav bar ---------------------------------------> */
+        .nav-bar {
+            width: 90%;
+        }
+    }
+    
+    
+    
+    
+    
+    /* <================ screen size 900px  ======================> */
+    @media only screen and (max-width:900px) {
+        .nav-bar .hamburger {
+            display: block;
+    
+        }
+    
+        /* <------------  nav menu --------------------------------> */
+        .nav-bar .menu {
+            width: 0;
+            display: flex;
+            flex-direction: row-reverse;
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            background-color: #dd092c;
+            transition: all .5s;
+            overflow: hidden;
+    
+        }
+    
+        /* <----------------  nav-bar active  -------------------------> */
+        .nav-bar .active {
+            width: 50%;
+        }
+    
+    
+        /* <--------------  nav-bar menu ul ------------------------>  */
+        .nav-bar .menu ul {
+            transition: all .5s;
+            margin: 0 auto auto 0;
+            padding: 0;
+            height: 60%;
+            flex-direction: column;
+            justify-content: space-evenly;
+    
+        }
+    /* <---------------- nav-bar menu  ul close -----------------------> */
+        .nav-bar .menu ul .close{
+            display: block;
+        }
+    
+    
+        /* <------------------    nav-bar menu  ul a -------------------------> */
+        .nav-bar .menu ul a {
+            letter-spacing: 1px;
+        }
+    
+    
+    }
+
+
+
+/* :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
+/*/* <===============    about   ======================> */
 .about
 {
     /* height:100px; */
     background-color:  #080808;;
-    margin: 0 auto 0 auto;
+    margin: 0 1px 0 0px;
     padding: 20px 0;
-    width:90%;
-       
+    padding-bottom: 150px;
+    width:100%;     
     color: whitesmoke;
     
 }
@@ -156,6 +223,8 @@ body,html{
 /* <================    about about-me   ======================> */
 .about .about-me{
     display: grid;
+    padding: 0 20px;
+
     grid-template-columns: 1fr 2fr auto;
 
     
@@ -191,7 +260,7 @@ body,html{
 
 
 /* <================    about about-me  about-text about-title  ======================> */
-.about .about-me .aboutme-text .aboutme-title
+ .aboutme-title
 {
      font-size: 40px;
      font-weight: bold;
@@ -256,6 +325,9 @@ body,html{
     background-color: #dd092c;
     transition: all .3s;
 }
+.about .about-me .aboutme-text .info-title-container ul .info-title::after{
+    width: 50%; 
+}
 
 .about .about-me .aboutme-text .info-title-container ul span:hover::after{
     width: 100%;
@@ -272,7 +344,7 @@ body,html{
 
 /* <================    about about-me  about-text  info-sect  p ======================> */
 .about .about-me .aboutme-text .info-sect p{
-    color:#dd092c;
+    color:hsl(350, 68%, 43%);
     padding-bottom: 5px;
     
 }
@@ -284,6 +356,11 @@ body,html{
     display: none;
 }
 
+/* .about .about-me .aboutme-text .info-title-container ul span::after{
+    width:30%;
+} */
+
+
 
 
 
@@ -292,6 +369,8 @@ body,html{
 
     .about{
         width: 100%;
+        align-items: center;
+        overflow: hidden;
     }
 
     .about .about-me{
@@ -299,85 +378,81 @@ body,html{
         display: grid;
         grid-template-columns: 1fr ;     
     }
+    .about .about-me .my-img img{
+        width: 320px;
+    }
 
     .about .about-me .aboutme-text{
         background-color: #080808
     }
 
     .about .about-me .aboutme-text .info-title-container ul span{
-       
-      margin: 15px;
-        
-
+      margin-right: 15px;
     }
  
 }
 
 
+/* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
 
 
-/* <================ screen size 1000px  ======================> */
-@media only screen and (max-width:1000px) {
-/* <-------------   nav bar ---------------------------------------> */
-    .nav-bar {
-        width: 90%;
-    }
+.Myservices{
+    background-color: #080808;
+    width: 100%;
 }
 
-
-
-
-
-/* <================ screen size 900px  ======================> */
-@media only screen and (max-width:900px) {
-    .nav-bar .hamburger {
-        display: block;
-
-    }
-
-    /* <------------  nav menu --------------------------------> */
-    .nav-bar .menu {
-        width: 0;
-        display: flex;
-        flex-direction: row-reverse;
-        position: absolute;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        background-color: #f3093c;
-        transition: all .5s;
-        overflow: hidden;
-
-    }
-
-    /* <----------------  nav-bar active  -------------------------> */
-    .nav-bar .active {
-        width: 50%;
-    }
-
-
-    /* <--------------  nav-bar menu ul ------------------------>  */
-    .nav-bar .menu ul {
-        transition: all .5s;
-        margin: 0 auto auto 0;
-        padding: 0;
-        height: 60%;
-        flex-direction: column;
-        justify-content: space-evenly;
-
-    }
-/* <---------------- nav-bar menu  ul close -----------------------> */
-    .nav-bar .menu ul .close{
-        display: block;
-    }
-
-
-    /* <------------------    nav-bar menu  ul a -------------------------> */
-    .nav-bar .menu ul a {
-        letter-spacing: 1px;
-    }
-
+.Myservices .container{
+    margin-top: 0;
+    padding:10%;
+    /* background-color:grey; */
+    display: flex;
+    justify-content: center;
+}
+.content{
+  
+    width:80%;
+    /* background-color: red; */
+}
+.Myservices .container .aboutme-title{
+   padding-bottom: 35px;
+}
+.Myservices .Services{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 30px;
+   
 
 }
 
+.Myservices .Services > .grid{
+    
+    border-radius: 10px;
+    padding:20px;
+    /* width: 240px; */
+    background-color: rgb(32, 30, 30);
+    aspect-ratio: 1 / .9;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    transition: all .2s linear ;
+}
+
+.Myservices .Services > .grid:hover{
+    background-color:#f3093c;
+    transform: translate(0,-5px);
+}
+
+.Myservices .Services > .grid > span{
+   font-size: 20px;
+   font-weight: bold;
+   
+}
+#Myservices .Services > .grid  p{
+   font-size: 11px;
+   line-height: 14px;
+   word-spacing:2px;
+   letter-spacing: .5px; 
+   /* /* font-family:Arial, Helvetica, sans-serif; */
+   
+}
 
