--- a/rough 2/styles.css
+++ b/rough 2/styles.css
@@ -1,72 +1,28 @@
-.container {
-    font-family: arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .flex {
-    background: #6ab6d8;
-    padding: 10px;
-    margin-bottom: 50px;
-    border: 3px solid #2e86bb;
-    color: white;
-    font-size: 14px;
-    text-align: center;
-    position: relative;
-  }
-  
-   .flex::after {
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    top: 100%;
-    margin-top: 10px;
-    width: 100%;
-    color: #333;
-    font-size: 12px;
-  } 
-  
-  
-  .flex1 {
-    flex-basis: auto;
-  }
- 
-  .flex1::after {
-    content: "auto";
-  }
+body{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+   justify-content: center;
    
-  .flex2 {
-    flex-basis: max-content;
-  }
-  
-  .flex2::after {
-      content: "max-content";
-    }
-    
-    .flex3 {
-        flex-basis: min-content;
-    }
-    
-    .flex3::after {
-        content: "min-content";
-    }
-    
-    .flex4 {
-        flex-basis: fit-content;
-    }
-    
-    .flex4::after {
-        content: "fit-content";
-    }
-    
-  .flex5 {
-    flex-basis: content;
-  }
-  
-  .flex5::after {
-    content: "content";
-  }
-   */
+}
+
+.content{
+  /* overflow:hidden; */
+}
+.content-1{
+  width :100px;
+  aspect-ratio: 1 / 1.3;
+  background-color: aqua;
+}
+
+.content-2{
+  /* background:linear-gradient(#dd092c); */
+  background-image: linear-gradient(to top ,rgba(255,0,0,1),rgba(255,255,255,0));
+  width: 100px;
+ aspect-ratio: 1 /1.3;
+transform-origin:bottom;
+ transform: scaley(3);
+ 
+}
