--- a/rough-work/styles.css
+++ b/rough-work/styles.css
@@ -438,7 +438,7 @@ body,html{
 }
 
 .Myservices .Services > .grid:hover{
-    background-color:#f3093c;
+    background-color:#db0b2e;
     transform: translate(0,-5px);
 }
 
@@ -447,12 +447,202 @@ body,html{
    font-weight: bold;
    
 }
-#Myservices .Services > .grid  p{
+.Myservices .Services > .grid  p{
    font-size: 11px;
    line-height: 14px;
    word-spacing:2px;
    letter-spacing: .5px; 
-   /* /* font-family:Arial, Helvetica, sans-serif; */
+    font-family:Arial, Helvetica, sans-serif;
    
 }
+/* ========================================= MY work======================================== */
+
+
+.Mywork{
+    background-color: #080808;
+    width: 100%;
+    
+}
+
+.Mywork .container{
+    margin-top: 0;
+    padding:10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.content{
+    width:80%;
+}
+.Mywork .container .aboutme-title{
+   padding-bottom: 35px;
+}
+.Mywork .Services{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 30px;
+    
+}
+
+.Mywork .Services > .grid > div {
+
+    background-color: rgb(32, 30, 30);
+    aspect-ratio: 1 / 1.3;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+   
+}
+
+.Mywork .Services > .grid > div>img{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-bottom:-3px ;
+    border-radius: 10px;
+}
+
+
+
+
+.Mywork .Services > .grid > div > div > p{
+    font-size: small;
+
+    padding-bottom: 10px;
+}
+
+
+.Mywork .Services > .grid > div::after{
+
+    display: block;
+    content: "";
+    width: 100%;
+   
+}
+
+
+
+.Mywork .Services > .grid > div:hover:after{
+    height: 100%;
+    transition: all .2s;
+    background:linear-gradient(to top, rgba(219,11,46,1),rgba(219,11,46,1),rgba(0,0,0,.5));
+    transform-origin:bottom;
+    transform: scaley(1.95);
+
+    
+  
+}
+
+#circle{
+    padding: 7px;
+    border-radius: 50%;
+    border: 1px solid white;
+    
+}
+
+
+    /* background:linear-gradient(rgba(255,0,0,1),rgba(255,255,255,0)); */
+  
+    
+    .Mywork .Services > .grid > div > .work-link-1{
+        
+        transition: all .5s;
+       /* color:#080808; */
+       z-index: 1;
+       position: absolute;
+       width: 100%;
+    
+       display: flex;
+       /* background-color: yellow; */
+       bottom:-50%;
+       margin-left: auto;
+       margin-right:auto;
+       
+       /* justify-content: center; */
+       align-items: center;
+       flex-direction: column;
+       text-align: center;
+       padding: 20px;
+        /* display: none; */
+        
+   }
+
+   i{
+    color: #fff;
+   }
+
+   #work-btn1{
+    margin :5%;
+    background-color: transparent;
+    color: #fff;
+    border-color: #dd092c;
+    border-width: 1px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all .2s;
+    margin-bottom: 8%;
+   
+   }
+   #work-btn1:hover{
+    transform: translate(0, 2px);
+     box-shadow:0px 7px 30px rgba(255,0,0,.6);
+   }
+
+
+   /* ==================================  Contac Me  ==========================================================================> */
+
+   #contact{
+    width: 100%;
+    background-color: #080808;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    justify-content: center; 
+    background-color: #fff;
+   }
+   #contact .container{
+   width:100%;
+   padding: 8% 0 0 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:bisque ;
+    height: 100%;
+   }
+
+   #contact .content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: lightblue;
+    height: 100%;
+    padding: 1%;
+   }
+   #contact .container .content .contact-side
+   {
+    flex-basis: 350px;
+    background-color: gray;
+    padding: 1%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+   }
+   #contact .container .content .form-side{
+    background-color: darkgray;
+    flex-basis:600px;
+    height: auto;
+    padding: 1%;
+   }
+
+
+
 
